--- a/myweb/templates/myweb/Assignment.html
+++ b/myweb/templates/myweb/Assignment.html
@@ -2,11 +2,11 @@
 {% block title %}Assignment{% endblock %}
 {% block content %}
   {% if user.is_authenticated %}
-  <li><a href="{% url 'myweb:detail' question.id %}">{{ question.question_text }}</a></li>
+  <li><a href="#">{{ question.question_text }}</a></li>
     {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
-        <li><a href="/myweb/{{ question.id }}/">{{ question.question_text }}</a></li>
+        <li><a href="/myweb/detail/{{ question.id }}/">{{ question.question_text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
