--- a/myweb/templates/myweb/lastuser.html
+++ b/myweb/templates/myweb/lastuser.html
@@ -26,7 +26,7 @@
                 {% csrf_token %}
                 <div class="form-group">
                     {{ form }}
-                    <button type="submit" class="submit">Signup</button>
+                    <button type="submit" class="submit">Subscribe</button>
                 </div>
               </form>
             </div>
