fix vote ไม่ได้

--- a/myweb/templates/myweb/results.html
+++ b/myweb/templates/myweb/results.html
@@ -9,6 +9,6 @@
 {% endfor %}
 </ul>
 
-<a href="{% url 'myweb:detail' question.id %}">Vote again?</a>
+<a href="/myweb/detail/{{question.id}}">Vote again?</a>
 {% endblock %}
 
