--- a/myweb/templates/myweb/feedback_form.html
+++ b/myweb/templates/myweb/feedback_form.html
@@ -3,7 +3,7 @@
 {% block title %}Feedback Form{% endblock %}
 
 {% block content %}
-<form action="covid19" method="POST">
+<form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" />
